--- a/demoflask/templates/home.html
+++ b/demoflask/templates/home.html
@@ -38,11 +38,18 @@
             <h3>Pending Orders:</h3>
             <span>10000</span>
         </div>
-        <div class="boxes">
+        <!-- <div class="boxes">
             <h3 id="boxicons"><i class="fas fa-tasks"></i></h3>
             <h3>Completed Orders:</h3>
             <span>10000</span>
-        </div>
+        </div> -->
+        <a href="/addproducts">
+        <div class="boxes">
+            <h3 id="boxicons"><i class="fas fa-plus" style="width: 40px;height: 40px;"></i></h3>
+            <h3>Add Products</h3>
+
+
+        </div></a>
 
     </div>
     <h3 id="reco">Recent Orders</h3>
