--- a/demoflask/templates/home.html
+++ b/demoflask/templates/home.html
@@ -20,24 +20,26 @@
         <h3 id="datetime">
         </h3>
     </div>
+
     <div class="boxpart">
         <div class="boxes">
             <h3 id="boxicons"><i class="far fa-chart-bar"></i></h3>
             <h3>Total Sales:</h3>
-            <span>10000</span>
+            <span>{{ statdata[0] }}</span>
 
 
         </div>
         <div class="boxes">
             <h3 id="boxicons"><i class="fa fa-scroll"></i></h3>
             <h3>Total Orders:</h3>
-            <span>10000</span>
+            <span>{{statdata[1]}}</span>
         </div>
         <div class="boxes">
             <h3 id="boxicons"><i class="fas fa-thumbtack"></i></h3>
             <h3>Pending Orders:</h3>
-            <span>10000</span>
+            <span>{{statdata[2]}}</span>
         </div>
+        
         <!-- <div class="boxes">
             <h3 id="boxicons"><i class="fas fa-tasks"></i></h3>
             <h3>Completed Orders:</h3>
