--- a/demoflask/templates/analytics.html
+++ b/demoflask/templates/analytics.html
@@ -142,7 +142,7 @@
     var barColors = [      "#b91d47",      "#00aba9",      "#2b5797",      "#e8c3b9",      "#1e7145"    ];
 
     new Chart("myChart-3", {
-      type: "doughnut",
+      type: "pie",
       data: {
         labels: labels,
         datasets: [{
