--- a/demoflask/templates/analytics.html
+++ b/demoflask/templates/analytics.html
@@ -161,76 +161,82 @@
 
 
 
-    <script>
-        var ctx = document.getElementById('myChart-4').getContext('2d');
-        var myPieChart = new Chart(ctx, {
-            type: 'doughnut',
-            data: {
-                labels: ['Red', 'Blue', 'Yellow'],
-                datasets: [{
-                    data: [12, 19, 3],
-                    backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)'
-                    ],
-                    borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(54, 162, 235, 1)',
-                        'rgba(255, 206, 86, 1)'
-                    ],
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                title: {
-                    display: true,
-                    text: 'My Pie Chart'
-                }
-            }
-        });
+<script>
+    var datat = JSON.parse('{{ salecat | tojson | safe }}');
 
-    </script>
-    <script>
-        var revenueData = {{ revdata| tojson }};
-        var months = [];
-        var revenue = [];
+    var labels = [];
+    var data = [];
 
-        // Extract data from JSON and format it for Chart.js
-        for (var i = 0; i < revenueData.length; i++) {
-            months.push(revenueData[i][0]);
-            revenue.push(revenueData[i][1]);
+    for (var i = 0; i < datat.length; i++) {
+        labels.push(datat[i][1]);
+        data.push(datat[i][0]);
+    }
+
+    var barColors = [      "crimson",      "#00aba9",      "#2b5797",      "#e8c3b9",      "#1e7145"    ];
+
+    new Chart("myChart-4", {
+      type: "doughnut",
+      data: {
+        labels: labels,
+        datasets: [{
+          backgroundColor: barColors,
+          data: data
+        }]
+      },
+      options: {
+        title: {
+          display: true,
+          text: "Sales By Category"
         }
+      }
+    });
+</script>
 
-        // Create bar chart using Chart.js
-        var ctx = document.getElementById('revenue-chart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: months,
-                datasets: [{
-                    label: 'Revenue',
-                    data: revenue,
-                    backgroundColor: 'rgba(54, 162, 235, 0.2)',
-                    borderColor: 'rgba(54, 162, 235, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                scales: {
-                    y: {
-                        beginAtZero: true
-                    }
-                },
-                plugins: {
-                    title: {
-                        display: true,
-                        text: 'Revenue by Month'
-                    }
-                }
+ <script>
+    var data = {{ revdata | tojson }};
+
+    var mon = [];
+    var vals = [];
+    var barColors = [];
+
+    console.log(data);
+
+
+
+    for (var i = 0; i < data.length; i++) {
+        mon.push(data[i][0]); //change to the second column
+        vals.push(data[i][1]); //change to the first column
+        barColors.push(getRandomColor()); // add a function to generate random colors
+    }
+
+    new Chart("myChart-5", {
+        type: "bar",
+        data: {
+            labels: mon,
+            datasets: [{
+                backgroundColor: barColors,
+                data: vals
+            }]
+        },
+        options: {
+            legend: { display: false },
+            title: {
+                display: true,
+                text: "Revenue graph"
             }
-        });
-    </script>
+        }
+    });
+
+    function getRandomColor() {
+        var letters = "0123456789ABCDEF";
+        var color = "#";
+        for (var i = 0; i < 6; i++) {
+            color += letters[Math.floor(Math.random() * 16)];
+        }
+        return color;
+    }
+</script>
+
 
 
 
