--- a/demoflask/templates/addproducts.html
+++ b/demoflask/templates/addproducts.html
@@ -76,8 +76,7 @@
                         </div>
                         <div class="form-group">
                             <label for="csv-file-input">CSV File</label>
-                            <input type="file" class="form-control-file" accept=".xlsx,.xls" id="csv-file-input"
-                                name="csv-file">
+                            <input type="file" class="form-control-file" accept=".xlsx,.xls" id="csv-file-input" name="file">
                         </div>
 
                         <center><button type="submit" onclick="validateFile()" class="btn btn-primary">Add
