--- a/demoflask/templates/analytics.html
+++ b/demoflask/templates/analytics.html
@@ -172,7 +172,7 @@
         data.push(datat[i][0]);
     }
 
-    var barColors = [      "crimson",      "#00aba9",      "#2b5797",      "#e8c3b9",      "#1e7145"    ];
+    var barColors = [      "crimson",      "gold",      "#2b5797",      "#e8c3b9",      "#1e7145"    ];
 
     new Chart("myChart-4", {
       type: "doughnut",
