--- a/demoflask/templates/orderspage.html
+++ b/demoflask/templates/orderspage.html
@@ -16,143 +16,9 @@
     {% block title %}Orderspage{% endblock %}
 
     {% block content %}
-    <h3>Orders</h3>
+    <h3 style="margin-bottom: 30px;">Orders</h3>
 
-    <!-- <div class="recentord">
-
-
-        <table class="tableofrecentord">
-            <tr id="fic">
-                <th>Product Name</th>
-                <th>Order Id</th>
-                <th>Payment status</th>
-                <th>Order Status</th>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-            <tr>
-                <td>bag</td>
-                <td>#sXlfM3</td>
-                <td>paid</td>
-                <td>pending</td>
-            </tr>
-
-
-        </table>
-
-    </div> -->
+   
 
     <div class="container orders-container">
 
