--- a/demoflask/templates/report.html
+++ b/demoflask/templates/report.html
@@ -21,10 +21,10 @@
     </header>
     <main>
         <section class="video">
-            <video controls>
-                <source src="video.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ELEjU2XjmO8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
 
         </section>
         <section class="faq">
