--- a/demoflask/static/dash.css
+++ b/demoflask/static/dash.css
@@ -109,7 +109,7 @@ a {
   background-color: #151837;
   color: aliceblue;
   border-radius: 50%;
-  transition:0.5s ease-in-out; 
+  transition: 0.5s ease-in-out;
 }
 .sidebar #logout {
   position: fixed;
@@ -124,6 +124,9 @@ a {
   margin-right: 10px;
   height: calc(100vh - 80px); /* Adjust the height as per your layout */
   overflow-y: auto;
+}
+.rightpart::-webkit-scrollbar {
+  display: none;
 }
 .updateform {
   display: none;
