--- a/demoflask/templates/addproducts.html
+++ b/demoflask/templates/addproducts.html
@@ -356,7 +356,7 @@
                 console.log(formData);
                 $.ajax({
                     type: 'POST',
-                    url: '/add_bulk_products',
+                    url: '/add_products',
                     data: formData,
                     contentType: false,
                     cache: false,
