--- a/demoflask/templates/dash.html
+++ b/demoflask/templates/dash.html
@@ -53,12 +53,14 @@
                     class="fas fa-plus"></i></a>
             <a href="/orderspage" title="Orders" {% if active=='order' %}class="active" {% endif %}><i
                     class="fa fa-scroll"></i></a>
-            <a href="/report" title="Reports" {% if active=='report' %}class="active" {% endif %}><i
-                    class="fas fa-exclamation-circle"></i></a>
+
             <a href="/customer" title="Customers" {% if active=='customer' %}class="active" {% endif %}><i
                     class="fas fa-user"></i></a>
             <a href="/productspage" title="Products" {% if active=='product' %}class="active" {% endif %}><i
                     class="fas fa-tasks"></i></a>
+
+            <a href="/report" title="Help" {% if active=='report' %}class="active" {% endif %}><i
+                    class="fas fa-exclamation-circle"></i></a>
 
 
 
@@ -182,9 +184,9 @@
             });
         }
     </script>
-    
-        
-   
+
+
+
 
 </body>
 
