--- a/demoflask/templates/report.html
+++ b/demoflask/templates/report.html
@@ -13,7 +13,7 @@
 <body>
     {% extends 'dash.html' %}
 
-    {% block title %}Report{% endblock %}
+    {% block title %}Help{% endblock %}
 
     {% block content %}
     <header>
